# shellquest

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  install.sh  publish.sh
docs/plans/: 2026-04-09-boss-system-design.md  2026-04-09-boss-system-plan.md  2026-04-09-class-messages-balance-plan.md  2026-04-09-dot-index-disambiguation-design.md  2026-04-09-dot-index-disambiguation-plan.md  2026-04-13-sell-wear-stat-design.md  2026-04-13-sell-wear-stat-plan.md
src/: AGENTS.md  arena.rs  boss.rs  character.rs  display.rs  events.rs  journal.rs  loot.rs  main.rs  messages.rs  sage.rs  state.rs  tournament.rs  zones.rs
