[package]
name = "shellquest"
version = "1.2.1"
edition = "2021"
description = "A passive RPG that lives in your terminal — your shell is the dungeon"
license = "MIT"
repository = "https://github.com/duysqubix/shellquest"
homepage = "https://github.com/duysqubix/shellquest"
readme = "README.md"
keywords = ["rpg", "terminal", "game", "cli", "passive"]
categories = ["command-line-utilities", "games"]

[[bin]]
name = "sq"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
